# KSeF_Monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IDE_TROUBLESHOOTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  alembic.ini  config.example.json  config.secure.json  db_admin.py  docker-compose.env.yml  docker-compose.secrets.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ruleset-int-branch.json  setup.sh
.gitea/workflows/: ci.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-requirements-updates.yml  check_ksef_fa_schema.yml  check_ksef_openapi.yml  docker-publish.yml  tests.yml  update-requirements.yml
alembic/: env.py
alembic/versions/: a6a08e11ea74_phase1_invoices_monitor_state_.py  b7c2d3e4f567_phase2_api_log_artifacts.py  c8d3e4f56789_phase3_push_instances.py  d9e0f1g2h345_phase4_initial_load_jobs.py  e0f1g2h34567_phase5_ui_users.py  f1a2b3c45678_phase6_login_attempts.py  g2b3c4d56789_phase7_session_ua_hash.py  h3c4d5e67890_phase8_initial_load_windows.py
app/: __init__.py  _ssrf_guard.py  config_manager.py  database.py  initial_load_manager.py  invoice_export_manager.py  invoice_monitor.py  invoice_pdf_generator.py  invoice_pdf_template.py  invoice_xml_parser.py  ksef_client.py  logging_config.py  pdf_constants.py  prometheus_metrics.py  push_manager.py  pushover_notifier.py  rate_limiter.py  scheduler.py  secrets_manager.py  template_renderer.py  ui_auth.py  user_admin.py  xades_signer.py
app/api/: __init__.py  _limiter.py  path_params.py  schemas.py  server.py
app/api/routers/: artifacts.py  initial_load.py  invoices.py  monitor.py  push.py  stats.py  ui.py
app/notifiers/: __init__.py  base_notifier.py  discord_notifier.py  email_notifier.py  ios_push_notifier.py  notification_manager.py  pushover_notifier.py  slack_notifier.py  webhook_notifier.py
app/templates/: discord.json.j2  email.html.j2  invoice_pdf.html.j2  invoice_pdf_fa_rr.html.j2  ios_push.json.j2  pushover.txt.j2  slack.json.j2  webhook.json.j2
app/ui/: README.md  tailwind.config.js
app/ui/static/: tailwind.min.css
app/ui/templates/: account.html  base.html  certificate.html  dashboard.html  initial_load.html  invoice_detail.html  invoices.html  login.html  push.html  setup.html
audit/: 2026-04-21-v0_5-security-audit-remediation.md  20260421_security_audit_docker_v0_4_pre_v0_5.md  20260421_security_audit_docker_v0_5_test_branch.md  20260422_security_reaudit_v0_5_post_remediation.md  20260504_security_audit_v0_5_1_ui_auth.md  audit_finding.md  ksef_monitor_v0_1.md  re_audit_finding.md
deploy/gitea-ci/: README.md  resolve-deploy-config.sh
deploy/synology/: README.md  compose.yaml  remote-deploy.sh
docs/: DATABASE.md  DATABASE_DESIGN.md  IDE_TROUBLESHOOTING.md  INDEX.md  KSEF_API_LIMITATIONS.md  KSEF_API_V2_4_UPDATE.md  KSEF_CERTIFICATE_AUTH.md  KSEF_TOKEN.md  LIGHTWEIGHT_POLLING_DESIGN.md  NOTIFICATIONS.md  OPTIMIZATION_FINDINGS.md  PDF_GENERATION.md  PDF_TEMPLATES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RATE_LIMITING_DESIGN.md  REAUDIT_REMEDIATION_REPORT.md  REST_API.md  ROADMAP.md  SECURITY.md  SPEC_CHECK_DESIGN.md  TEMPLATES.md  TESTING.md  TODO.md
docs/audit/: 20260319_security_audit_docker_monitor.md
docs/superpowers/plans/: 2026-04-21-v0_5-security-audit-remediation.md  2026-06-30-gitea-ci-docker-deploy.md
examples/: .env.example  config.example.json  config.secure.json  test_dummy_pdf.py  test_invoice_pdf.py  test_template_pdf.py  test_upo_download.py
spec/: openapi-demo.json  openapi-test.json  openapi.json  schemat_FA(2)_v1-0E.xsd  schemat_FA_RR(1)_v1-1E.xsd  schemat_FA_RR_v1-0E.xsd
tests/: conftest.py  test_api_auth.py  test_api_initial_load.py  test_api_invoices.py  test_api_monitor.py  test_api_push.py  test_api_rate_limit.py  test_api_stats.py  test_certificate_auth.py  test_config_manager.py  test_database_phase2.py  test_db_migration.py  test_initial_load_manager.py  test_invoice_export_manager.py  test_invoice_monitor.py  test_ios_push_notifier.py  test_ksef_client.py  test_logging_config.py  test_multi_schema_parser.py  test_notification_manager.py  test_pdf_security.py  test_push_manager.py  test_rate_limiter.py  test_scheduler.py  test_secrets_manager.py  test_security_controls.py  test_ssrf_guard.py  test_template_renderer.py  test_ui_user_auth.py  test_version_consistency.py
tests-e2e/: .env.example  .gitignore  BUGS_FOUND.md  README.md  conftest.py  pytest.ini  requirements.txt
tests-e2e/tests/: test_01_smoke.py  test_02_login.py  test_03_auth_flow.py  test_04_invoices.py  test_05_invoice_detail.py  test_06_account.py  test_07_security.py  test_08_ai_explorer.py  test_09_accessibility.py  test_10_responsive.py
tests-e2e/utils/: explorer.py  reporter.py
(+1 files in other folders)
