[project]
name = "ksef-monitor"
version = "0.3.0"
description = "Monitor faktur w Krajowym Systemie e-Faktur (KSeF) — polling API, powiadomienia multi-kanałowe, generowanie PDF"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ksef", "e-faktura", "invoice", "poland", "monitoring", "prometheus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "requests==2.32.5",
    "python-dateutil==2.9.0.post0",
    "cryptography==46.0.5",
    "prometheus-client==0.24.1",
    "pytz==2026.1.post1",
    "Jinja2>=3.1.0,<4.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "reportlab==4.4.10",
    "qrcode==8.2",
    "xhtml2pdf>=0.2.16,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/mlotocki2k/KSeF_Monitor"
Repository = "https://github.com/mlotocki2k/KSeF_Monitor"
Documentation = "https://github.com/mlotocki2k/KSeF_Monitor/tree/main/docs"
Issues = "https://github.com/mlotocki2k/KSeF_Monitor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
